# Fastapi-boilerplate-full-stack

./: .env.example  .pre-commit-config.yaml  README.md  docker-compose.yaml  justfile  package-lock.json  package.json  pyproject.toml  tailwind.config.js
alembic/: env.py
alembic/versions/: 1566b9d6b444_add_invitation_model.py  7011c69f94d4_add_password_reset_model.py  ad5cbc2b816f_add_api_key_access_level.py  c979b19d4cc1_initial_migration.py  e4f84e126dd0_initial_migration.py
app/: app.py  logger.py  settings.py
app/auth/: models.py  utils.py  views.py
app/auth/providers/: views.py
app/auth/templates/: account_settings.html  account_settings_api_keys.html  account_settings_delete.html  account_settings_profile.html  account_settings_providers.html  admin.html  admin_email.html  admin_users.html  change_email.html  connect_local.html  forgot_password.html  login.html  register.html  resend_verification.html  reset_password.html
app/auth/templates/_components/: admin_email_tester.html  admin_invite_user.html  (+2 more)
app/auth/views/: __init__.py  account.py  admin.py  auth.py  verification.py
app/common/: constants.py  templates.py  utils.py
app/common/templates/: 404.html  dashboard.html  index.html
app/common/views/: dashboard.py
app/email/: config.py  send.py
app/email/templates/: invitation.html  invitation.json  reset_password.html  reset_password.json  verify.html  verify.json  verify_old_email.html  verify_old_email.json  welcome.html  welcome.json
app/home/: views.py
app/static/: app.css  app.js
app/static/scripts/: useCopyToClipboard.js
(+11 files in other folders)
