[project]
name = "fastapi-boilerplate"
version = "0.1.0"
description = "Starter boilerplate for FastAPI projects with authentication, database, and email support."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.1",
    "asyncpg>=0.30.0",
    "bcrypt>=4.2.1",
    "fastapi-mail>=1.4.2",
    "fastapi-sso>=0.17.0",
    "fastapi[standard]>=0.115.8",
    "greenlet>=3.1.1",
    "humanfriendly>=10.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.5",
    "loguru>=0.7.3",
    "passlib>=1.7.4",
    "pydantic-settings>=2.7.1",
    "pyjwt>=2.10.1",
    "sqlalchemy>=2.0.38",
]
